@@ -26,6 +26,8 @@ Changes in Shorewall 4.4.2
 
 12) Change 'wait4ifup' so that it requires no PATH
 
+13) Allow extension scripts for accounting chains.
+
 Changes in Shorewall 4.4.1
 
 1)  Deleted extra 'use ...IPAddrs.pm' from Nat.pm.
